2011-07-28  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/build.c, src/build.h, src/editor.c, src/interface.c,
   src/keyfile.c, src/prefs.c, src/stash.c, src/stash.h,
   src/ui_utils.c, geany.glade, doc/geany.txt, doc/geany.html:
   Allow to edit formerly hidden preferences in the prefs dialog
   (closes #3313315, patch by Dimitar Zhekov, thanks!).


2011-06-26  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/highlighting.c:
   Recognize C# and Vala raw and verbatim strings as string styles.
 * src/editor.c:
   Fix indentation brace matching (closes #3309606).


2011-06-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c, doc/geany.txt, doc/geany.html, README, HACKING,
   geany.pc.in:
   More GTK 2.8 => GTK 2.12 transition.


2011-06-20  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/document.h, src/keyfile.c, doc/geany.txt,
   doc/geany.html:
   Add an hidden pref to choose between GIO and plain C unsafe
   file saving.
 * configure.ac, src/document.c, win32-config.h:
   Completely drop HAVE_GIO checks.


2011-06-18  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/document.h, src/editor.c:
   Remove support of size being -1 in document_open_file_list().
 * src/utils.c src/utils.h:
   Remove support of size being -1 in utils_get_line_endings().
 * src/stash.c, src/stash.h:
   Make StashWidgetID map to gconstpointer, allowing use of const
   strings as the widget key.


2011-06-16  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/main.c, src/ui_utils.c, src/utils.c:
   Remove most of the checks for GIO.
 * src/win32.c:
   Remove last GLib >= 2.16 check.


2011-06-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/python.c:
   Fix two bugs with triple quoted strings within comments
   and missing indentation within triple quoted strings
   (#3316966, synced from CTags SVN, patch by Elias Pschernig, thanks).

